Remove link embed styling and fix scrollbar styling

--- a/club_locator.css
+++ b/club_locator.css
@@ -80,16 +80,16 @@
 .c-map__sidebar-listings .item.active {
   background-color:#f8f8f8;
 }
-::-webkit-scrollbar {
+c-map__main-div::-webkit-scrollbar {
   width:20px;
   height:10px;
   border-left:0;
   background:rgba(0,0,0,0.05);
 }
-::-webkit-scrollbar-track {
+c-map__main-div::-webkit-scrollbar-track {
   background:none;
 }
-::-webkit-scrollbar-thumb {
+c-map__main-div::-webkit-scrollbar-thumb {
   background:#951818;
   border-radius:0;
 }
@@ -148,10 +148,6 @@
 
 .mapboxgl-popup-content div {
   padding:10px;
-}
-
-.mapboxgl-popup-content a {
-  color: #951818;
 }
 
 .mapboxgl-container .leaflet-marker-icon {
